@@ -2,6 +2,8 @@ package uk.gov.hmcts.ethos.replacement.docmosis.helpers;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import uk.gov.hmcts.et.common.model.bulk.types.DynamicFixedListType;
+import uk.gov.hmcts.et.common.model.bulk.types.DynamicValueType;
 import uk.gov.hmcts.et.common.model.ccd.Address;
 import uk.gov.hmcts.et.common.model.ccd.CaseData;
 import uk.gov.hmcts.et.common.model.ccd.CaseDetails;
@@ -14,12 +16,10 @@ import java.io.IOException;
 import java.net.URISyntaxException;
 import java.nio.file.Files;
 import java.nio.file.Paths;
-import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
 
-import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.hasSize;
@@ -27,6 +27,7 @@ import static org.hamcrest.core.Is.is;
 import static uk.gov.hmcts.ecm.common.model.helper.Constants.ENGLANDWALES_CASE_TYPE_ID;
 import static uk.gov.hmcts.ecm.common.model.helper.Constants.NO;
 import static uk.gov.hmcts.ecm.common.model.helper.Constants.YES;
+import static uk.gov.hmcts.ethos.replacement.docmosis.helpers.Et3ResponseHelper.ALL_RESPONDENTS_INCOMPLETE_SECTIONS;
 
 @SuppressWarnings({"PMD.UseProperClassLoader", "PMD.LinguisticNaming", "PMD.TooManyMethods"})
 class Et3ResponseHelperTest {
@@ -117,44 +118,45 @@ class Et3ResponseHelperTest {
     void getDocumentRequest_buildsCorrectData() throws IOException, URISyntaxException {
         Address et3Address = CaseDataBuilder.builder().createAddress("line1", "line2", "line3", "town", "county",
             "postcode", "country");
-
-        caseData.setEt3RespondentAddress(et3Address);
+        caseData.setEthosCaseReference("1800001/2021");
         caseData.setClaimant("claimant name");
-        caseData.setEt3ResponseRespondentLegalName("legal name");
-        caseData.setEt3ResponseRespondentCompanyNumber("1234");
-        caseData.setEt3ResponseRespondentEmployerType("employer type");
-        caseData.setEt3ResponseRespondentContactName("contact name");
-        caseData.setEt3ResponseEmploymentCount("100");
-        caseData.setEt3ResponseSiteEmploymentCount("100");
-        caseData.setEt3ResponseAcasAgreeReason("acas agree reason");
-        caseData.setEt3ResponseEmploymentStartDate("2022-01-01");
-        caseData.setEt3ResponseEmploymentEndDate("2022-01-02");
-        caseData.setEt3ResponseEmploymentInformation("employment information");
-        caseData.setEt3ResponseCorrectJobTitle("fall guy");
-        caseData.setEt3ResponseClaimantCorrectHours("168");
-        caseData.setEt3ResponsePayBeforeTax("69000");
-        caseData.setEt3ResponsePayTakehome("25000");
-        caseData.setEt3ResponseCorrectNoticeDetails("notice details");
-        caseData.setEt3ResponseContestClaimDetails("contest claim");
-        caseData.setEt3ResponseEmployerClaimDetails("ecc");
-        caseData.setEt3ResponseRespondentSupportDetails("support details");
-        caseData.setEt3ResponsePensionCorrectDetails("pension details");
-        caseData.setEt3ResponseHearingRespondent(List.of("Phone hearings"));
-        caseData.setEt3ResponseHearingRepresentative(List.of("Video hearings"));
-        caseData.setEt3ResponseRespondentPreferredTitle("Mr");
-        caseData.setEt3ResponseMultipleSites("Yes");
-        caseData.setEt3ResponseAcasAgree("No");
-        caseData.setEt3ResponseAreDatesCorrect("No");
-        caseData.setEt3ResponseIsJobTitleCorrect("No");
-        caseData.setEt3ResponseClaimantWeeklyHours("No");
-        caseData.setEt3ResponseEarningDetailsCorrect("No");
-        caseData.setEt3ResponseIsNoticeCorrect("Not applicable");
-        caseData.setEt3ResponseRespondentContestClaim("Yes");
-        caseData.setEt3ResponseRespondentSupportNeeded("Yes");
-        caseData.setEt3ResponseContinuingEmployment("No");
-        caseData.setEt3ResponseIsPensionCorrect("No");
-        caseData.setEt3ResponseContactPreference("Post");
-        caseData.setEt3ResponsePayFrequency("Weekly");
+        RespondentSumType respondentSumType = caseData.getRespondentCollection().get(0).getValue();
+        respondentSumType.setResponseRespondentAddress(et3Address);
+        respondentSumType.setResponseRespondentName("legal name");
+        respondentSumType.setEt3ResponseRespondentCompanyNumber("1234");
+        respondentSumType.setEt3ResponseRespondentEmployerType("employer type");
+        respondentSumType.setEt3ResponseRespondentContactName("contact name");
+        respondentSumType.setEt3ResponseEmploymentCount("100");
+        respondentSumType.setEt3ResponseSiteEmploymentCount("100");
+        respondentSumType.setEt3ResponseAcasAgreeReason("acas agree reason");
+        respondentSumType.setEt3ResponseEmploymentStartDate("2022-01-01");
+        respondentSumType.setEt3ResponseEmploymentEndDate("2022-01-02");
+        respondentSumType.setEt3ResponseEmploymentInformation("employment information");
+        respondentSumType.setEt3ResponseCorrectJobTitle("fall guy");
+        respondentSumType.setEt3ResponseClaimantCorrectHours("168");
+        respondentSumType.setEt3ResponsePayBeforeTax("69000");
+        respondentSumType.setEt3ResponsePayTakehome("25000");
+        respondentSumType.setEt3ResponseCorrectNoticeDetails("notice details");
+        respondentSumType.setEt3ResponseContestClaimDetails("contest claim");
+        respondentSumType.setEt3ResponseEmployerClaimDetails("ecc");
+        respondentSumType.setEt3ResponseRespondentSupportDetails("support details");
+        respondentSumType.setEt3ResponsePensionCorrectDetails("pension details");
+        respondentSumType.setEt3ResponseHearingRespondent(List.of("Phone hearings"));
+        respondentSumType.setEt3ResponseHearingRepresentative(List.of("Video hearings"));
+        respondentSumType.setEt3ResponseRespondentPreferredTitle("Mr");
+        respondentSumType.setEt3ResponseMultipleSites("Yes");
+        respondentSumType.setEt3ResponseAcasAgree("No");
+        respondentSumType.setEt3ResponseAreDatesCorrect("No");
+        respondentSumType.setEt3ResponseIsJobTitleCorrect("No");
+        respondentSumType.setEt3ResponseClaimantWeeklyHours("No");
+        respondentSumType.setEt3ResponseEarningDetailsCorrect("No");
+        respondentSumType.setEt3ResponseIsNoticeCorrect("Not applicable");
+        respondentSumType.setEt3ResponseRespondentContestClaim("Yes");
+        respondentSumType.setEt3ResponseRespondentSupportNeeded("Yes");
+        respondentSumType.setEt3ResponseContinuingEmployment("No");
+        respondentSumType.setEt3ResponseIsPensionCorrect("No");
+        respondentSumType.setResponseRespondentContactPreference("Post");
+        respondentSumType.setEt3ResponsePayFrequency("Weekly");
 
         Address repAddress = CaseDataBuilder.builder().createAddress(
             "r1", "r2", "r3", "rTown", "rCounty",
@@ -169,10 +171,11 @@ class Et3ResponseHelperTest {
                 .representativePhoneNumber("phone")
                 .build());
         caseData.setRepCollection(List.of(representedTypeRItem));
+        caseData.setSubmitEt3Respondent(DynamicFixedListType.of(DynamicValueType.create("test", "test")));
 
         // UTF-8 is required here for special characters to resolve on Windows correctly
-        String expected = new String(Files.readAllBytes(Paths.get(Objects.requireNonNull(getClass().getClassLoader()
-                .getResource("et3ResponseDocument.json")).toURI())), UTF_8);
+        String expected = Files.readString(Paths.get(Objects.requireNonNull(getClass().getClassLoader()
+                .getResource("et3ResponseDocument.json")).toURI()));
 
         String actual = Et3ResponseHelper.getDocumentRequest(caseData, "any");
         assertThat(actual).isEqualTo(expected);
@@ -199,14 +202,23 @@ class Et3ResponseHelperTest {
     }
 
     @Test
-    void addEt3DataToRespondent() {
+    void addEt3DataToRespondent_allSections() {
         caseData.setEt3ResponseIsClaimantNameCorrect(YES);
         caseData.setEt3ResponsePhone("1234");
-        Et3ResponseHelper.addEt3DataToRespondent(caseData);
+        caseData.setEt3ResponseAcasAgree(YES);
+        caseData.setEt3ResponseEmploymentCount("10");
+        Et3ResponseHelper.addEt3DataToRespondent(caseData, "et3Response");
+        Et3ResponseHelper.addEt3DataToRespondent(caseData, "et3ResponseEmploymentDetails");
+        Et3ResponseHelper.addEt3DataToRespondent(caseData, "et3ResponseClaimDetails");
         RespondentSumType respondentSumType = caseData.getRespondentCollection().get(0).getValue();
         assertThat(respondentSumType.getEt3ResponseIsClaimantNameCorrect()).isEqualTo(YES);
-        assertThat(respondentSumType.getResponseReceived()).isEqualTo(YES);
-        assertThat(respondentSumType.getResponseReceivedDate()).isEqualTo(LocalDate.now().toString());
+        assertThat(respondentSumType.getResponseRespondentPhone1()).isEqualTo("1234");
+        assertThat(respondentSumType.getEt3ResponseAcasAgree()).isEqualTo(YES);
+        assertThat(respondentSumType.getEt3ResponseEmploymentCount()).isEqualTo("10");
+        assertThat(respondentSumType.getPersonalDetailsSection()).isEqualTo(YES);
+        assertThat(respondentSumType.getClaimDetailsSection()).isEqualTo(YES);
+        assertThat(respondentSumType.getEmploymentDetailsSection()).isEqualTo(YES);
+
     }
 
     @Test
@@ -216,4 +228,26 @@ class Et3ResponseHelperTest {
         assertThat(errors, hasSize(1));
         assertThat(errors.get(0)).isEqualTo("No respondents found");
     }
+
+    @Test
+    void createEt3SubmitRespondents_allSectionsCompleted() {
+        caseData.getRespondentCollection().get(0).getValue().setPersonalDetailsSection(YES);
+        caseData.getRespondentCollection().get(0).getValue().setClaimDetailsSection(YES);
+        caseData.getRespondentCollection().get(0).getValue().setEmploymentDetailsSection(YES);
+        List<String> errors = Et3ResponseHelper.et3SubmitRespondents(caseData);
+        assertThat(errors.size()).isEqualTo(0);
+        assertThat(caseData.getSubmitEt3Respondent()).isNotNull();
+    }
+
+    @Test
+    void createEt3SubmitRespondents_twoSectionsCompleted() {
+        caseData.getRespondentCollection().get(0).getValue().setPersonalDetailsSection(YES);
+        caseData.getRespondentCollection().get(0).getValue().setClaimDetailsSection(YES);
+        caseData.getRespondentCollection().get(0).getValue().setEmploymentDetailsSection(NO);
+        List<String> errors = Et3ResponseHelper.et3SubmitRespondents(caseData);
+        assertThat(errors.size()).isEqualTo(1);
+        assertThat(errors.get(0)).isEqualTo(ALL_RESPONDENTS_INCOMPLETE_SECTIONS);
+    }
+
+
 }
